@@ -39,7 +39,7 @@ DetectState cdParser::Parse(unsigned char *data, uint64_t len, uint64_t pos, boo
                         jend=i-15;
                         type=CD;
                         info=cdif;
-                        pinfo=" (m"+ itos(info==1?1:2) +"/f"+ itos(info!=3?1:2) +")";
+                        pinfo="(m"+ itos(info==1?1:2) +"/f"+ itos(info!=3?1:2) +")";
                         state=END;
                         return state;
                     }
@@ -65,7 +65,7 @@ DetectState cdParser::Parse(unsigned char *data, uint64_t len, uint64_t pos, boo
                         jend=i-2352+1;
                         type=CD;
                         info=cdif;
-                        pinfo=" (m"+ itos(info==1?1:2) +"/f"+ itos(info!=3?1:2) +")";
+                        pinfo="(m"+ itos(info==1?1:2) +"/f"+ itos(info!=3?1:2) +")";
                         state=END;
                         return state;
                     }
@@ -73,7 +73,7 @@ DetectState cdParser::Parse(unsigned char *data, uint64_t len, uint64_t pos, boo
                         jend=i+1;
                         type=CD;
                         info=cdif;
-                        pinfo=" (m"+ itos(info==1?1:2) +"/f"+ itos(info!=3?1:2) +")";
+                        pinfo="(m"+ itos(info==1?1:2) +"/f"+ itos(info!=3?1:2) +")";
                         state=END;
                         return state;
                     }
