@@ -136,7 +136,7 @@ DetectState TARParser::Parse(unsigned char *data, uint64_t len, uint64_t pos, bo
                         jend=0;
                         relAdd=tar;
                         state=END;
-                        pinfo=" TAR - files " +itos(tarFiles);
+                        pinfo="TAR - files " +itos(tarFiles);
                         rec=true;           // fall to recursive mode
                     } else if (state!=NONE) {
                         int a=getoct(tarh.size,12);
@@ -170,7 +170,7 @@ DetectState TARParser::Parse(unsigned char *data, uint64_t len, uint64_t pos, bo
                     state=END;
                     tarF.pop_back(); // remove last file, partial
                     tarFiles--;
-                    pinfo=" TAR - files " +itos(tarFiles);
+                    pinfo="TAR - files " +itos(tarFiles);
                     rec=true;
                     if (tarFiles==0) { // ignore if one partial file
                         state=NONE;
